<resources>
    <string name="app_name">Locarm</string>
    <string name="turn_off">추적 종료</string>
    <string name="turn_on">추적 시작</string>
    <string name="km">km</string>
    <string name="spacer_km"> km</string>
    <string name="notification_info_icon_description">알림 아이콘</string>

    <!--  MainActivity  -->
    <string name="mainActivity_input_destination_toast_message">목적지를 입력하세요</string>
    <string name="mainActivity_change_alarm_distance_toast_message">목적지로부터 %dKm 이내 접근 시 알람이 울립니다.</string>
    <string name="mainActivity_input_number_toast_message">숫자를 입력해주세요.</string>
    <string name="mainActivity_input_location">위치를 입력하세요.</string>
    <string name="mainActivity_favorites">즐겨찾기</string>
    <string name="mainActivity_delete_all">전체 삭제</string>
    <string name="mainActivity_nearby_alarm">인접 시 알람</string>
    <string name="mainActivity_change">변경</string>
    <string name="favorite_icon_description">즐겨찾기 아이콘</string>
    <string name="favorite_navigate_icon_description">즐겨찾기 이동</string>
    <string name="location_icon_description">위치 아이콘</string>
    <string name="alarm_range_distance_icon_description">알람 범위 아이콘</string>
    <string name="select_destination">목적지를 선택하세요</string>
    <string name="select_destination_description">검색창을 터치하여 \n목적지를 검색하거나 지도에서 선택하세요</string>
    <string name="search_destination">목적지 검색하기</string>
    <string name="navigation_icon_description">네비게이션 아이콘</string>
    <string name="remaining_distance">남은 거리</string>
    <string name="remaining_distance_value">%1$s Km</string>
    <string name="tracking_location">실시간 위치 추적 중</string>
    <string name="tracking_running_icon_description">추적 중 아이콘</string>
    <string name="alarm_range_distance_setting">알림 반경 설정</string>
    <string name="one_km">1km</string>
    <string name="distance_control">← 거리 조절 →</string>
    <string name="five_km">5km</string>
    <string name="current_alarm_distance_chip">%1$d km</string>
    <string name="permission_request">권한 요청</string>
    <string name="setting">설정</string>
    <string name="all_permission_denied">위치와 알림 권한이 없으면 앱 사용이 제한됩니다</string>
    <string name="location_permission_denied">위치 권한이 없으면 앱 사용이 제한됩니다.</string>
    <string name="never_location_permission_granted">위치 권한이 없습니다. (설정 > 앱 > 권한)</string>
    <string name="notification_permission_denied">알림 권한이 없으면 알림 기능이 제한됩니다</string>
    <string name="never_notification_permission_granted">알림 기능이 제한됩니다 (설정 > 앱 > 권한)</string>
    <string name="limit_location_notification_permissions">위치와 알림 권한이 없습니다</string>

    <!--  SearchActivity  -->
    <string name="searchActivity_register">등록</string>
    <string name="searchActivity_input_destination">목적지를 입력하세요</string>
    <string name="searchActivity_dialog_input_destination_name">목적지 이름 지정</string>
    <string name="searchActivity_dialog_done">확인</string>
    <string name="searchActivity_dialog_add_favorites_message">즐겨찾기에 추가하시겠습니까?</string>
    <string name="searchActivity_dialog_post_button">예</string>
    <string name="searchActivity_dialog_negative_button">아니오</string>
    <string name="searchActivity_dialog_first_km">1km</string>
    <string name="searchActivity_dialog_second_km">2km</string>
    <string name="searchActivity_dialog_third_km">3km</string>
    <string name="searchActivity_dialog_input_self">직접 입력하기</string>
    <string name="searchActivity_dialog_edittext_hint">입력란</string>
    <string name="searchActivity_dialog_km">Km</string>
    <string name="searchActivity_dialog_cancel">취소</string>
    <string name="searchActivity_snack_bar_add">추가</string>
    <string name="pass">건너뛰기</string>
    <string name="edit">등록</string>

    <!--  Favorite  -->
    <string name="delete">삭제</string>
    <string name="select_all">전체</string>
    <string name="cancel">취소</string>

    <string name="search_item_top_of_search_address_result">검색 결과 최상단</string>

    <!--    BackgroundLocationUpdateService    -->
    <string name="backgroundLocationUpdate_destination_nearby">목적지 인접</string>
    <string name="backgroundLocationUpdate_location_info">위치 정보</string>
    <string name="backgroundLocationUpdate_remaining_distance">%1$s까지 남은 거리</string>
    <string name="backgroundLocationUpdate_pushAlarm_content">목적지까지 %1$sKM 남았습니다.</string>
    <string name="backgroundLocationUpdate_close_destination_notification_content">%1$s까지 남은 거리: %2$skm</string>
</resources>
