<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:orientation="vertical">

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <RadioButton
            android:id="@+id/one"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/searchActivity_dialog_first_km" />

        <RadioButton
            android:id="@+id/two"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/searchActivity_dialog_second_km" />

        <RadioButton
            android:id="@+id/three"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/searchActivity_dialog_third_km" />

        <RadioButton
            android:id="@+id/another"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/searchActivity_dialog_input_self"
            />
    </RadioGroup>
    <LinearLayout
        android:id="@+id/another_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="invisible"
        >
        <EditText
            android:id="@+id/another_text"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:autofillHints="@string/searchActivity_dialog_edittext_hint"
            android:inputType="number"
            android:hint="@string/searchActivity_dialog_edittext_hint"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/searchActivity_dialog_km"
            android:textColor="@color/base_textColor"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:text="@string/searchActivity_dialog_cancel" />

        <Button
            android:id="@+id/check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:text="@string/searchActivity_dialog_done" />
    </LinearLayout>

</LinearLayout>
