<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    android:background="@drawable/bg_destination_input_dialog">

    <ImageView
        android:id="@+id/location_icon"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/bg_location_icon"
        android:contentDescription="@string/location_icon_description"
        android:padding="12dp"
        android:src="@drawable/ic_location_on"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.086"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/blue" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="36dp"
        android:text="@string/searchActivity_dialog_input_destination_name"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/location_icon"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/destination_editText"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:layout_margin="16dp"
        android:autofillHints="@string/searchActivity_dialog_input_destination_name"
        android:background="@drawable/bg_destination_input_dialog_edit_text"
        android:hint="@string/searchActivity_dialog_input_destination_name"
        android:inputType="textNoSuggestions|textVisiblePassword"
        android:padding="16dp"
        android:textCursorDrawable="@drawable/edit_text_cursor"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/location_icon" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/edit_button"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:layout_gravity="bottom"
        android:layout_margin="16dp"
        android:background="@drawable/bg_destination_input_dialog_button"
        android:text="@string/edit"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/destination_editText" />

</androidx.constraintlayout.widget.ConstraintLayout>
